# zero_prod

./: .gitignore  Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: push-container.yaml  push-container.yml
src/: configuration.rs  main.rs  startup.rs
